
cmake_minimum_required(VERSION 3.26.4)
project(finalProject)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

file(GLOB TXTS "*.txt")
file(COPY ${TXTS} DESTINATION ${CMAKE_BINARY_DIR})

FILE(GLOB SOURCES "*.cpp")
FILE(GLOB HEAD "*.h")

add_executable(finalProject ${SOURCES} ${HEAD})